cabal-version:       2.2
name:                tasty-hslua
version:             1.1.1
synopsis:            Tasty helpers to test HsLua.
description:         Various tasty helpers and utilities to test HsLua
                     oparations. Built on top of tasty-hunit.
homepage:            https://hslua.org/
bug-reports:         https://github.com/hslua/hslua/issues
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          tarleb@hslua.org
copyright:           © 2017-2024 Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.7
                   , GHC == 9.8.4
                   , GHC == 9.10.2
                   , GHC == 9.12.2

source-repository head
  type:                git
  location:            https://github.com/hslua/hslua.git

common common-options
  default-language:    Haskell2010
  build-depends:       base          >= 4.11   && < 5
                     , hslua-core    >= 2.3    && < 2.4
                     , bytestring    >= 0.10.2 && < 0.13

  ghc-options:         -Wall
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:         -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:         -Winvalid-haddock

library
  import:              common-options
  exposed-modules:     Test.Tasty.HsLua
  hs-source-dirs:      src
  default-extensions:  LambdaCase
  other-extensions:    OverloadedStrings
  build-depends:       tasty                >= 0.11
                     , tasty-hunit          >= 0.9
