cabal-version:       2.2
name:                tasty-lua
version:             1.0.1
synopsis:            Write tests in Lua, integrate into tasty.
description:         Allow users to define tasty tests from Lua.
homepage:            https://github.com/hslua/hslua
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          albert+hslua@zeitkraut.de
copyright:           © 2019–2022 Albert Krewinkel <albert+hslua@zeitkraut.de>
category:            Foreign
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , tasty.lua
                   , test/test-tasty.lua
tested-with:         GHC == 8.0.2
                   , GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5
                   , GHC == 8.8.3
                   , GHC == 8.10.7
                   , GHC == 9.0.1
                   , GHC == 9.2.1

source-repository head
  type:              git
  location:          https://github.com/hslua/hslua.git
  subdir:            tasty-lua

common common-options
  default-language:    Haskell2010
  build-depends:       base              >= 4.8    && < 5
                     , bytestring        >= 0.10.2 && < 0.12
                     , hslua-core        >= 2.0    && < 2.2
                     , hslua-marshalling >= 2.0    && < 2.2
                     , lua-arbitrary     >= 1.0    && < 1.1
                     , tasty             >= 1.2    && < 1.5
                     , QuickCheck        >= 2.9    && < 2.15
  default-extensions:  LambdaCase
                     , StrictData
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wnoncanonical-monad-instances
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:         -Wcpp-undef
                         -Werror=missing-home-modules
  if impl(ghc >= 8.4)
    ghc-options:         -Widentities
                         -Wincomplete-uni-patterns
                         -Wpartial-fields
                         -fhide-source-paths

library
  import:              common-options
  build-depends:       file-embed        >= 0.0    && < 0.1
                     , text              >= 1.2    && < 2.1
  exposed-modules:     Test.Tasty.Lua
                     , Test.Tasty.Lua.Arbitrary
                     , Test.Tasty.Lua.Core
                     , Test.Tasty.Lua.Module
                     , Test.Tasty.Lua.Translate
  hs-source-dirs:      src
  other-extensions:    OverloadedStrings
                     , ScopedTypeVariables
                     , TemplateHaskell

test-suite test-tasty-lua
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-tasty-lua.hs
  hs-source-dirs:      test
  ghc-options:         -threaded
  build-depends:       directory
                     , filepath    >= 1.4
                     , tasty-lua
                     , tasty-hunit
