cabal-version:       2.2
name:                tasty-lua
version:             1.1.2
synopsis:            Write tests in Lua, integrate into tasty.
description:         Allow users to define tasty tests from Lua.
homepage:            https://github.com/hslua/hslua
license:             MIT
license-file:        LICENSE
author:              Albert Krewinkel
maintainer:          tarleb@hslua.org
copyright:           © 2019-2025 Albert Krewinkel <tarleb@hslua.org>
category:            Foreign
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , tasty.lua
                   , test/test-tasty.lua
tested-with:         GHC == 8.8.4
                   , GHC == 8.10.7
                   , GHC == 9.0.2
                   , GHC == 9.2.8
                   , GHC == 9.4.8
                   , GHC == 9.6.7
                   , GHC == 9.8.4
                   , GHC == 9.10.2
                   , GHC == 9.12.2

source-repository head
  type:              git
  location:          https://github.com/hslua/hslua.git
  subdir:            tasty-lua

common common-options
  default-language:    Haskell2010
  build-depends:       base              >= 4.11   && < 5
                     , hslua-core        >= 2.3    && < 2.4
                     , hslua-marshalling >= 2.0    && < 2.4
                     , lua-arbitrary     >= 1.0    && < 1.1
                     , tasty             >= 1.2    && < 1.6
                     , QuickCheck        >= 2.9    && < 2.18
  default-extensions:  LambdaCase
                     , StrictData

  ghc-options:         -Wall
                       -Wcpp-undef
                       -Werror=missing-home-modules
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wnoncanonical-monad-instances
                       -Wpartial-fields
                       -Wredundant-constraints
                       -fhide-source-paths
  if impl(ghc >= 8.10)
    ghc-options:         -Wunused-packages
  if impl(ghc >= 9.0)
    ghc-options:         -Winvalid-haddock

library
  import:              common-options
  build-depends:       bytestring        >= 0.10.2 && < 0.13
                     , file-embed        >= 0.0    && < 0.1
  exposed-modules:     Test.Tasty.Lua
                     , Test.Tasty.Lua.Arbitrary
                     , Test.Tasty.Lua.Core
                     , Test.Tasty.Lua.Module
                     , Test.Tasty.Lua.Translate
  hs-source-dirs:      src
  other-extensions:    OverloadedStrings
                     , ScopedTypeVariables
                     , TemplateHaskell

test-suite test-tasty-lua
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             test-tasty-lua.hs
  hs-source-dirs:      test
  ghc-options:         -threaded
  build-depends:       directory
                     , filepath    >= 1.4
                     , tasty-lua
                     , tasty-hunit
